ajout de settings

--- a/index.html
+++ b/index.html
@@ -45,6 +45,8 @@
 
   <button id="clear-button" onclick="removeAllDrawnPolygons()" style="font-size: 25px;">🗑</button>
 
+  <button id="change-button" onclick="askForManifestUrl()" style="font-size: 25px;">🛠</button>
+
 </div>
 
 </body>
