zen state of fk mind

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 	<script src="leaflet-iiif.js"></script>
   <script src="draw.js"></script>
   <script src="saveLayer.js" async></script>
+  <script src="random.js" async></script>
   <script type="text/javascript" src="leaflet-hash.js"></script>
   <script src="data.js"></script>
 
@@ -51,6 +52,9 @@
     <button id="add-button" title="+json">➕</button>
 
     <button id="favs-button" title="favoris">🖤</button>
+
+    <button id="random-button">🎲</button>
+
 
 
   </div>
