--- a/index.html
+++ b/index.html
@@ -16,8 +16,7 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8/jquery.min.js"></script>
 	<script src="leaflet-iiif.js"></script>
   <script src="draw.js"></script>
-  <script src="saveLayer.js" async></script>
-  <script src="random.js" async></script>
+ / <script src="saveLayer.js"></script>
   <script type="text/javascript" src="leaflet-hash.js"></script>
   <script src="data.js"></script>
 
@@ -41,7 +40,7 @@
 
   <div class="button-container">
 
-    <button id="info-button" style="font-size: 25px;" title="Info">☘</button>
+    <button id="info-button" style="font-size: 25px;" title="Info"`>☘</button>
 
     <button id="save-button" onclick="downloadDrawnLayers()" title="Sauvegarder">💾</button>
 
@@ -53,6 +52,9 @@
 
 
   </div>
+
+<script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+<script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 
 <script src="main.js"></script>
 
