zen is my grass

--- a/index.html
+++ b/index.html
@@ -17,6 +17,11 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8/jquery.min.js"></script>
     <script src="leaflet-iiif.js"></script>
     <script type="text/javascript" src="leaflet-hash.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.1/gsap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.1/ScrollTrigger.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.8.0/TextPlugin.min.js"></script>
+    <script src="DrawSVGPlugin.min.js"></script>
+
     <script src="data.js"></script>
 
     <!--styles-->
@@ -33,46 +38,82 @@
       src="https://kit.fontawesome.com/ba154ee9c3.js"
       crossorigin="anonymous"
     ></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Libre+Baskerville&display=swap"
+      rel="stylesheet"
+    />
   </head>
 
   <body class="click-capture">
-    <div id="map"></div>
+    <!DOCTYPE html>
 
-    <div id="infoBox" class="info-box">
-      <div id="infoContent" class="info-content">
-        <!-- Default content here -->
+    <div id="main">
+      <div id="map"></div>
+
+      <div id="infoBox" class="info-box">
+        <div id="infoContent" class="info-content">
+          <!-- Default content here -->
+        </div>
+      </div>
+
+      <div id="buttons"></div>
+
+      <div class="button-container">
+        <button id="info-button" title="Info">
+          <i class="fa-solid fa-info"></i>
+        </button>
+
+        <button
+          id="save-button"
+          onclick="downloadDrawnLayers()"
+          title="Sauvegarder"
+        >
+          <i class="fa-solid fa-floppy-disk"></i>
+        </button>
+
+        <button
+          id="clear-button"
+          onclick="removeAllDrawnPolygons()"
+          title="Effacer"
+        >
+          <i class="fa-solid fa-trash"></i>
+        </button>
+
+        <button id="ask-button" title="Manifeste">
+          <i class="fa-solid fa-image"></i>
+        </button>
+
+        <button id="add-button" title="+json">
+          <i class="fa-solid fa-plus"></i>
+        </button>
+      </div>
+
+      <div id="story">
+        <div style="height: 1000px"></div>
+
+        <div id="item1" class="story">
+          <p id="text1" class="typeWriter"></p>
+        </div>
+
+        <div style="height: 750px"></div>
+
+        <div id="item2" class="story">
+          <img id="img2" class="hidden" src="espionne.png" alt="Espionne" />
+          <p id="text2" class="typeWriter"></p>
+        </div>
+
+        <div style="height: 750px"></div>
+
+        <div id="item3" class="story">
+          <img id="img3" class="hidden" src="bazar.png" alt="Bazar" />
+          <p id="text3" class="typeWriter"></p>
+        </div>
+
+        <div style="height: 750px"></div>
       </div>
     </div>
-
-    <div class="button-container">
-      <button id="info-button" title="Info">
-        <i class="fa-solid fa-info"></i>
-      </button>
-
-      <button
-        id="save-button"
-        onclick="downloadDrawnLayers()"
-        title="Sauvegarder"
-      >
-        <i class="fa-solid fa-floppy-disk"></i>
-      </button>
-
-      <button
-        id="clear-button"
-        onclick="removeAllDrawnPolygons()"
-        title="Effacer"
-      >
-        <i class="fa-solid fa-trash"></i>
-      </button>
-
-      <button id="ask-button" style="font-size: 20px" title="Manifeste">
-        <i class="fa-solid fa-image"></i>
-      </button>
-
-      <button id="add-button" title="+json">
-        <i class="fa-solid fa-plus"></i>
-      </button>
-
     <script src="main.js"></script>
   </body>
 </html>
